--- a/ESC2020/ESC2020/ClientApp/src/app/MesSalons/mesSalons.component.html
+++ b/ESC2020/ESC2020/ClientApp/src/app/MesSalons/mesSalons.component.html
@@ -46,7 +46,8 @@
     <hr class="separator">
     <div style="margin-left:10px; margin-right:10px;">
       <div class="dateD">
-        Début du mandat le : {{session.startDate}}
+
+        Début du mandat le : {{session.startDate |  date:'shortDate' : locale:'fr-FR'}}
       </div>
       <div class="phase">
         Phase de vote
